refactor(api): reduce usage of scanners package
